--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
 <body>
   <header>
     <nav>
+      <div class="nav-container">
+        <h1 class="nav-h1">G3 Architects</h1>
+        <ul>
+          <div class="nav-li">
+            <li style="list-style: none;"><a href="">Home</a> </li>
+            <li style="list-style: none;"><a href="">About</a> </li>
+            <li style="list-style: none;"><a href="">Contact us</a> </li>
+            <li style="list-style: none;"><a href="">Login</a></li>
+
+          </div>
+        </ul>
+      </div>
 
     </nav>
   </header>
   <main>
 
   </main>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
