--- a/index.html
+++ b/index.html
@@ -11,20 +11,38 @@
 <body>
   <header>
     <nav>
-      <div class="nav-container">
-        <h1 class="nav-h1">G3 Architects</h1>
-        <ul>
-          <div class="nav-li">
-            <li style="list-style: none;"><a href="">Home</a> </li>
-            <li style="list-style: none;"><a href="">About</a> </li>
-            <li style="list-style: none;"><a href="">Contact us</a> </li>
-            <li style="list-style: none;"><a href="">Login</a></li>
 
-          </div>
-        </ul>
-      </div>
+      <h1 class="nav-h1">G3 Architects</h1>
+      <ul>
+
+        <li style="list-style: none;"><a href="">Home</a> </li>
+        <li style="list-style: none;"><a href="">About</a> </li>
+        <li style="list-style: none;"><a href="">Contact us</a> </li>
+        <li style="list-style: none;"><a href="">Login</a></li>
+
+
+      </ul>
+      <!-- Banner section -->
+
+
 
     </nav>
+    <!-- Banner Section -->
+    <div class="banner">
+      <h1 class="banner-title">
+        Brand New
+        Group of Architects
+
+      </h1>
+      <h3 class="banner-description">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+        some form, by injected humour, or randomised words which don't look even
+      </h3>
+      <button class="btn-primary">
+        Explore more
+      </button>
+      <img src="./images/banner.png" alt="" class="banner-img">
+    </div>
   </header>
   <main>
 
