--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
         Group of Architects
 
       </h1>
-      <h3 class="banner-description">
-        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-        some form, by injected humour, or randomised words which don't look even
-      </h3>
+      <div class="banner-description">
+        <p>
+          There are many variations of passages of Lorem Ipsum available,
+          but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even
+        </p>
+      </div>
       <button class="btn-primary">
         Explore more
       </button>
