--- a/index.html
+++ b/index.html
@@ -79,6 +79,45 @@
 
       </div>
     </section>
+    <!-- Fact sections -->
+    <section class="facts">
+      <h1 class="fact-title">Some facts
+
+      </h1>
+      <p class="fact-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority
+        have
+        suffered alteration.
+
+      </p>
+    </section>
+    <section class="rectangle">
+      <div class="box1">
+        <img src="./images/icons/ribon.png" alt="">
+        <h5>54</h5>
+        <h5 class="box-description">Award giving</h5>
+
+      </div>
+      <div class="box1">
+        <img src="./images/icons/ribon.png" alt="">
+        <h5>54</h5>
+        <h5 class="box-description">Award giving</h5>
+
+      </div>
+      <div class="box1">
+        <img src="./images/icons/ribon.png" alt="">
+        <h5>54</h5>
+        <h5 class="box-description">Award giving</h5>
+
+      </div>
+      <div class="box1">
+        <img src="./images/icons/ribon.png" alt="">
+        <h5>54</h5>
+        <h5 class="box-description">Award giving</h5>
+
+      </div>
+
+    </section>
+
 
   </main>
   <footer>
