--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="banner-description">
         <p>
           There are many variations of passages of Lorem Ipsum available,
-          but the majority have suffered alteration in
+          but the majority have suffered alteration in <br>
           some form, by injected humour, or randomised words which don't look even
         </p>
       </div>
@@ -117,11 +117,37 @@
       </div>
 
     </section>
+    <!-- Sponsors sectionss -->
+    <section>
+      <h3 class="sponsors-title">
+        our Sponsors
+
+      </h3>
+      <p class="sponsors-description">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+
+      </p>
+    </section>
+    <section class="logo">
+      <img src="/images/sponsors/amazon.png" alt="">
+      <img src="/images/sponsors/spotify.png" alt="">
+      <img src="/images/sponsors/google.png" alt="">
+      <img src="/images/sponsors/figma.png" alt="">
+
+    </section>
+
+
+
 
 
   </main>
   <footer>
-
+    <!-- 
+      Footer
+     -->
+    <p class="footer">
+      All rights reserved copyright@2023 startup landing page design
+    </p>
   </footer>
 </body>
 
