--- a/index.html
+++ b/index.html
@@ -79,6 +79,81 @@
 
       </div>
     </section>
+    <!-- Features Sections -->
+    <section class="ejoyable-features">
+      <div class="features-content">
+        <h3 class="features-title">
+          Features you will love & enjoy</h3>
+        <p class="features-description">
+          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even
+        </p>
+        <div class="features-div-container">
+          <div class="features-div">
+            <h3 class="fearures-div-title">
+              Dexktop & Mobile Version
+
+            </h3>
+            <p class="features-div-details">
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+              in
+              some form, by injected humour, or randomised...........
+            </p>
+
+          </div>
+          <div class="features-div">
+            <h3 class="fearures-div-title">
+              Dexktop & Mobile Version
+
+            </h3>
+            <p class="features-div-details">
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+              in
+              some form, by injected humour, or randomised...........
+            </p>
+
+          </div>
+          <div class="features-div">
+            <h3 class="fearures-div-title">
+              Dexktop & Mobile Version
+
+            </h3>
+            <p class="features-div-details">
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+              in
+              some form, by injected humour, or randomised...........
+            </p>
+
+          </div>
+
+
+
+          <div class="features-div">
+            <h3 class="fearures-div-title">
+              Dexktop & Mobile Version
+
+            </h3>
+            <p class="features-div-details">
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+              in
+              some form, by injected humour, or randomised...........
+            </p>
+
+          </div>
+        </div>
+
+
+
+      </div>
+      <div class="features-img">
+        <img src="./images/architect.png" alt="">
+        <div class="image-box">
+          <h1 class="image-box-title">10+year</h1>
+          <p class="image-box-description">Experience</p>
+        </div>
+
+      </div>
+    </section>
     <!-- Fact sections -->
     <section class="facts">
       <h1 class="fact-title">Some facts
